--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/tablet.css">
       <link rel="stylesheet" href="css/mobile.css"> 
-      
+      <link rel="stylesheet" href="css/miniapp.css"> 
 </head>
 <body>
       <main>
